--- a/Home_Sales_starter_code.ipynb
+++ b/Home_Sales_starter_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "2XbWNf1Te5fM"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -43,29 +43,65 @@
     "id": "wOJqxG_RPSwp",
     "outputId": "7857ef9f-5b04-405d-f5aa-e535dfe7870c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|f8a53099-ba1c-47d...|2022-04-08|      2016|936923|       4|        3|       3167|   11733|     2|         1|  76|\n",
+      "|7530a2d8-1ae3-451...|2021-06-13|      2013|379628|       2|        2|       2235|   14384|     1|         0|  23|\n",
+      "|43de979c-0bf0-4c9...|2019-04-12|      2014|417866|       2|        2|       2127|   10575|     2|         0|   0|\n",
+      "|b672c137-b88c-48b...|2019-10-16|      2016|239895|       2|        2|       1631|   11149|     2|         0|   0|\n",
+      "|e0726d4d-d595-407...|2022-01-08|      2017|424418|       3|        2|       2249|   13878|     2|         0|   4|\n",
+      "|5aa00529-0533-46b...|2019-01-30|      2017|218712|       2|        3|       1965|   14375|     2|         0|   7|\n",
+      "|131492a1-72e2-4a8...|2020-02-08|      2017|419199|       2|        3|       2062|    8876|     2|         0|   6|\n",
+      "|8d54a71b-c520-44e...|2019-07-21|      2010|323956|       2|        3|       1506|   11816|     1|         0|  25|\n",
+      "|e81aacfe-17fe-46b...|2020-06-16|      2016|181925|       3|        3|       2137|   11709|     2|         0|  22|\n",
+      "|2ed8d509-7372-46d...|2021-08-06|      2015|258710|       3|        3|       1918|    9666|     1|         0|  25|\n",
+      "|f876d86f-3c9f-42b...|2019-02-27|      2011|167864|       3|        3|       2471|   13924|     2|         0|  15|\n",
+      "|0a2bd445-8508-4d8...|2021-12-30|      2014|337527|       2|        3|       1926|   12556|     1|         0|  23|\n",
+      "|941bad30-eb49-4a7...|2020-05-09|      2015|229896|       3|        3|       2197|    8641|     1|         0|   3|\n",
+      "|dd61eb34-6589-4c0...|2021-07-25|      2016|210247|       3|        2|       1672|   11986|     2|         0|  28|\n",
+      "|f1e4cef7-d151-439...|2019-02-01|      2011|398667|       2|        3|       2331|   11356|     1|         0|   7|\n",
+      "|ea620c7b-c2f7-4c6...|2021-05-31|      2011|437958|       3|        3|       2356|   11052|     1|         0|  26|\n",
+      "|f233cb41-6f33-4b0...|2021-07-18|      2016|437375|       4|        3|       1704|   11721|     2|         0|  34|\n",
+      "|c797ca12-52cd-4b1...|2019-06-08|      2015|288650|       2|        3|       2100|   10419|     2|         0|   7|\n",
+      "|0cfe57f3-28c2-472...|2019-10-04|      2015|308313|       3|        3|       1960|    9453|     2|         0|   2|\n",
+      "|4566cd2a-ac6e-435...|2019-07-15|      2016|177541|       3|        3|       2130|   10517|     2|         0|  25|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Read in the AWS S3 bucket into a DataFrame.\n",
     "from pyspark import SparkFiles\n",
     "url = \"https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv\"\n",
-    "\n"
+    "spark.sparkContext.addFile(url)\n",
+    "temp_file_path = SparkFiles.get(\"home_sales_revised.csv\")\n",
+    "df = spark.read.csv(temp_file_path, header=True, inferSchema=True)\n",
+    "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "\n"
+    "df.createOrReplaceTempView(\"home_sales_view\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -73,15 +109,39 @@
     "id": "L6fkwOeOmqvq",
     "outputId": "bdded620-79c4-488d-c7a5-91c6799c419e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|year|average_price|\n",
+      "+----+-------------+\n",
+      "|2019|     300263.7|\n",
+      "|2020|    298353.78|\n",
+      "|2021|    301819.44|\n",
+      "|2022|    296363.88|\n",
+      "+----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
-    "\n"
+    "average_prices_df = spark.sql(\"\"\"\n",
+    "    SELECT YEAR(date) as year, ROUND(AVG(price), 2) as average_price\n",
+    "    FROM home_sales_view\n",
+    "    WHERE bedrooms = 4\n",
+    "    GROUP BY YEAR(date)\n",
+    "    ORDER BY year\n",
+    "\"\"\")\n",
+    "\n",
+    "average_prices_df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -89,15 +149,39 @@
     "id": "l8p_tUS8h8it",
     "outputId": "65806e5f-6262-41c0-ff65-5107464e5c4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|year|average_price|\n",
+      "+----+-------------+\n",
+      "|2019|    287287.82|\n",
+      "|2020|    294204.16|\n",
+      "|2021|    294211.46|\n",
+      "|2022|    292725.69|\n",
+      "+----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
-    "\n"
+    "average_prices_df = spark.sql(\"\"\"\n",
+    "    SELECT YEAR(date) as year, ROUND(AVG(price), 2) as average_price\n",
+    "    FROM home_sales_view\n",
+    "    WHERE bedrooms = 3 AND bathrooms = 3\n",
+    "    GROUP BY YEAR(date)\n",
+    "    ORDER BY year\n",
+    "\"\"\")\n",
+    "\n",
+    "average_prices_df.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -105,16 +189,41 @@
     "id": "Y-Eytz64liDU",
     "outputId": "17119810-56ad-40c3-de5e-c3db57e43bcc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|year|average_price|\n",
+      "+----+-------------+\n",
+      "|2019|    289859.14|\n",
+      "|2020|    292289.09|\n",
+      "|2021|    296330.96|\n",
+      "|2022|    290242.99|\n",
+      "+----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  5. What is the average price of a home for each year built that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
-    "\n"
+    "average_prices_df = spark.sql(\"\"\"\n",
+    "    SELECT YEAR(date) as year, ROUND(AVG(price), 2) as average_price\n",
+    "    FROM home_sales_view\n",
+    "    WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_living >= 2000\n",
+    "    GROUP BY YEAR(date)\n",
+    "    ORDER BY year\n",
+    "\"\"\")\n",
+    "\n",
+    "\n",
+    "average_prices_df.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -122,13 +231,32 @@
     "id": "GUrfgOX1pCRd",
     "outputId": "17c25774-855e-4290-a4bd-a04902bdc13a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|average_view|\n",
+      "+------------+\n",
+      "|       32.26|\n",
+      "+------------+\n",
+      "\n",
+      "--- 0.24536895751953125 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. What is the \"view\" rating for the average price of a home, rounded to two decimal places, where the homes are greater than\n",
     "# or equal to $350,000? Although this is a small dataset, determine the run time for this query.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "result_df = spark.sql(\"\"\"\n",
+    "    SELECT ROUND(AVG(view), 2) as average_view\n",
+    "    FROM home_sales_view\n",
+    "    WHERE price >= 350000\n",
+    "\"\"\").show()\n",
     "\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
@@ -136,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -144,14 +272,26 @@
     "id": "KAhk3ZD2tFy8",
     "outputId": "0a8f132d-40a8-4bd4-b5f2-2847e98427f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 7. Cache the the temporary table home_sales.\n"
+    "# 7. Cache the the temporary table home_sales.\n",
+    "spark.sql('cache table home_sales_view')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -159,15 +299,26 @@
     "id": "4opVhbvxtL-i",
     "outputId": "38ec8487-795f-4550-b50c-fcc6f2b7c769"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. Check if the table is cached.\n",
-    "spark.catalog.isCached('home_sales')"
+    "spark.catalog.isCached('home_sales_view')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -175,14 +326,32 @@
     "id": "5GnL46lwTSEk",
     "outputId": "09a16c73-194d-4371-95d1-ee64fe83b91c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|average_view|\n",
+      "+------------+\n",
+      "|       32.26|\n",
+      "+------------+\n",
+      "\n",
+      "--- 0.11070656776428223 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 9. Using the cached data, run the query that filters out the view ratings with average price \n",
     "#  greater than or equal to $350,000. Determine the runtime and compare it to uncached runtime.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "result_df = spark.sql(\"\"\"\n",
+    "    SELECT ROUND(AVG(view), 2) as average_view\n",
+    "    FROM home_sales_view\n",
+    "    WHERE price >= 350000\n",
+    "\"\"\").show()\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
    ]
@@ -195,7 +364,8 @@
    },
    "outputs": [],
    "source": [
-    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n"
+    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n",
+    "df.write.partitionBy(\"date_built\").parquet(\"partitions\")"
    ]
   },
   {
@@ -206,7 +376,8 @@
    },
    "outputs": [],
    "source": [
-    "# 11. Read the formatted parquet data.\n"
+    "# 11. Read the formatted parquet data.\n",
+    "pdf = spark.read.parquet('partitions')"
    ]
   },
   {
@@ -217,7 +388,8 @@
    },
    "outputs": [],
    "source": [
-    "# 12. Create a temporary table for the parquet data.\n"
+    "# 12. Create a temporary table for the parquet data.\n",
+    "pdf.createOrReplaceTempView('parqsales')"
    ]
   },
   {
@@ -238,14 +410,18 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "spark.sql(\"\"\"\n",
+    "          SELECT round((avg(view)),2) as avg_view_rating \n",
+    "          FROM p_sales_p \n",
+    "          WHERE price >= 350000\n",
+    "          \"\"\").show()\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -253,14 +429,26 @@
     "id": "hjjYzQGjtbq8",
     "outputId": "830549fd-bb41-451b-9183-5ebf6e3e470b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 14. Uncache the home_sales temporary table.\n"
+    "# 14. Uncache the home_sales temporary table.\n",
+    "spark.sql('uncache table home_sales_view')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -268,10 +456,21 @@
     "id": "Sy9NBvO7tlmm",
     "outputId": "be73e0e3-5e85-4794-aad9-025fb6fa84a7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 15. Check if the home_sales is no longer cached\n",
-    "\n"
+    "spark.catalog.isCached(\"home_sales_view\")\n"
    ]
   },
   {
@@ -303,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
   "nteract": {
    "version": "0.28.0"
